// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddressRowMobile > should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should not render validator name if name is not provided 1`] = `<DocumentFragment />`;

exports[`AddressRowMobile > should render in 375 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be76b31E402a2D89294Aa107056484Bef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render in 420 screen width 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
  ,
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when the wallet has many votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet hasn't voted 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              />
              <div
                class="flex items-center gap-3"
              >
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-1"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0x659A76be283644AEc2003aa8ba26485047fd1BFB
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not found for votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href="https://explorer-evm-test.mainsailhq.com/addresses/0x1Bf9cf8a006a5279ca81Ea9D3F6aC2D41e1353e2"
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0x1Bf9c…e1353e2
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              />
              <div
                class="flex items-center gap-3"
              >
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed disabled:text-theme-secondary-400 dark:disabled:text-theme-secondary-700 text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-1"
                  disabled=""
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0x7F9d7FdA68521c09Bd2749a36514e514abB0866F
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render when wallet not loaded 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                    data-testid="AddressRowMobile--nowallet"
                  >
                    N/A
                  </span>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <span
                    class="text-theme-secondary-500 dark:text-theme-dark-500 text-sm font-semibold"
                  >
                    N/A
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with active validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Active
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-success-100 text-theme-success-700 dark:border-theme-success-800 dark:text-theme-success-500 inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Active
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with resigned validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-warning-100 text-theme-warning-900 dark:border-theme-danger-info-border dark:text-theme-danger-info-text inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Resigned
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-warning-100 text-theme-warning-900 dark:border-theme-danger-info-border dark:text-theme-danger-info-text inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Resigned
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRowMobile > should render with standby validator 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-testid="AddressRowMobile"
      >
        <td
          class="pt-3"
        >
          <div
            class="flex w-full max-w-[calc(100vw-48px)] flex-col overflow-hidden rounded border border-theme-secondary-300 dark:border-theme-secondary-800 dim:border-theme-dim-700"
            data-testid="mobile-table-element"
          >
            <div
              class="dark:bg-theme-dark-950 flex space-x-3 overflow-auto px-4 py-3 bg-theme-secondary-100 dim:bg-theme-dim-950 dark:bg-black"
              data-testid="mobile-table-element-header"
            >
              <span
                class="text-theme-secondary-900 dark:text-theme-text flex-1 truncate text-sm font-semibold"
              >
                Mainsail Wallet 1
              </span>
              <div
                class="flex items-center gap-3"
              >
                <div
                  class="bg-theme-warning-100 text-theme-warning-900 dark:border-theme-danger-info-border dark:text-theme-danger-info-text inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent sm:hidden"
                  data-testid="AddressRowMobile__wallet-status-0"
                >
                  Standby
                </div>
                <span
                  class="bg-theme-secondary-300 dark:bg-theme-secondary-800 dim:bg-theme-dim-700 block h-5 w-px sm:hidden"
                />
                <button
                  class="space-x-3 relative items-center inline-flex justify-center font-semibold text-center transition-colors-shadow duration-100 ease-linear outline-hidden rounded cursor-pointer focus:outline-hidden focus:ring-2 focus:ring-theme-primary-400 disabled:cursor-not-allowed border-none text-theme-primary-600 dark:hover:text-theme-primary-500 hover:text-theme-primary-700 p-0 text-sm hover:underline"
                  data-testid="AddressRowMobile__select-0"
                  type="button"
                >
                  <div
                    class="flex items-center space-x-2"
                  >
                    Vote
                  </div>
                </button>
              </div>
            </div>
            <div
              class="grid gap-4 px-4 py-3 sm:grid-cols-3"
              data-testid="mobile-table-element-body"
            >
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Address
                </div>
                <div>
                  <div
                    class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
                  >
                    <span
                      class="no-ligatures min-w-0 overflow-hidden text-theme-text font-semibold text-sm"
                      data-testid="Address__address"
                    >
                      0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="grid grid-cols-1 gap-2"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Voting for
                </div>
                <div>
                  <div
                    class="flex items-center"
                  >
                    <div
                      class="flex flex-1 justify-end overflow-hidden"
                    >
                      <a
                        class="relative cursor-pointer space-x-1 font-semibold no-underline transition-colors focus:outline-hidden text-theme-primary-600 hover:text-theme-primary-700 active:text-theme-primary-400 dark:hover:text-theme-primary-500 dim:text-theme-dim-navy-600 dim-hover:text-theme-dim-navy-700 ring-focus group/inner [&_svg]:text-theme-secondary-500 dark:[&_svg]:text-theme-dark-500 flex w-full items-center text-sm"
                        data-ring-focus-margin="-m-1"
                        data-testid="Link"
                        href=""
                        rel="noopener noreferrer"
                      >
                        <span
                          class="border-b border-transparent break-all transition-colors delay-100 duration-200 group-hover/inner:border-current"
                        >
                          <div
                            class="flex w-full items-center"
                          >
                            <span
                              class="no-ligatures"
                              data-testid="TruncateMiddle"
                            >
                              0xB8Be7…ef94362
                            </span>
                          </div>
                        </span>
                        <div
                          class="mb-[3px] shrink-0 align-middle duration-200 inline-block text-sm"
                          data-testid="Link__external"
                        >
                          <div
                            style="height: 12px; width: 12px;"
                          >
                            <svg
                              id="arrow-external"
                              style="height: 100%; width: 100%;"
                              viewBox="0 0 20 20"
                              x="0"
                              xml:space="preserve"
                              xmlns="http://www.w3.org/2000/svg"
                              y="0"
                            >
                              <path
                                d="M18.999 6.43V1h-5.43m5.43 0L7.033 12.966M9.749 4h-7.5c-.625 0-1.25.625-1.25 1.25v12.5c0 .625.625 1.25 1.25 1.25h12.5c.625 0 1.25-.625 1.25-1.25v-7.5"
                                fill="none"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="grid-cols-1 gap-2 hidden sm:grid"
              >
                <div
                  class="text-theme-secondary-700 dark:text-theme-dark-200 dim:text-theme-dim-200 text-sm font-semibold"
                >
                  Validator Status
                </div>
                <div>
                  <div
                    class="bg-theme-warning-100 text-theme-warning-900 dark:border-theme-danger-info-border dark:text-theme-danger-info-text inline-block min-w-[58px] rounded px-1 py-[3px] text-center text-xs font-semibold dark:border dark:bg-transparent"
                    data-testid="AddressRow__wallet-status"
                  >
                    Standby
                  </div>
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
